[package]
name = "team_player_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = { version = "1", features = ["behavior-version-latest"] }
env_logger = "0.8"
log = "0.4"
ulid = "1.1.2"
